# mlb-data

./: .gitignore  README.md  main.py  pyproject.toml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/gold/: gold_standings.sql  gold_team_performance.sql
dbt/models/silver/: _sources.yml  silver_schedule.sql  silver_standings.sql  silver_teams.sql
src/: constants.py
src/mlb_data/: definitions.py
src/mlb_data/assets/: dbt.py  game_feed.py  player_stats.py  schedule.py  standings.py  teams.py
src/mlb_data/jobs/: bronze_partitioned.py  bronze_snapshot.py
src/mlb_data/resources/: duckdb.py
src/mlb_data/sensors/: dbt.py
src/utils/: logger.py
tests/jobs/: test_bronze_partitioned.py
ui/: dugout.py
