[project]
name = "mlb-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "black>=26.3.1",
    "dagster>=1.13.4",
    "dagster-dg-cli>=1.13.4",
    "dagster-webserver>=1.13.4",
    "mlb-statsapi>=1.9.0",
    "requests>=2.34.1",
    "ruff>=0.15.12",
]
