[project]
name = "mlb-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "dagster>=1.13.4",
    "dagster-dbt>=0.29.4",
    "dagster-dg-cli>=1.13.4",
    "dagster-duckdb>=0.29.4",
    "dagster-duckdb-pandas>=0.29.4",
    "dagster-webserver>=1.13.4",
    "dbt-duckdb>=1.10.1",
    "mlb-statsapi>=1.9.0",
    "requests>=2.34.1",
    "textual>=8.2.7",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlb_data"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "mlb_data"
